[package]
name = "ikigai-throttle"
description = "Reliability interception overlays for ikigai: RateLimit (per-prefix rate), Retry (re-issue transient idempotent failures), CircuitBreaker (trip open on a failing dependency), Failover (try [primary, backup, ...] on transient failure), Timeout (bound an invocation, transient on elapse), Throttle (cap concurrency, park the excess); logging & load-balancing later."
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
repository = "https://github.com/ikigai-rs/ikigai-throttle"

[dependencies]
# Native crate: it keeps a sliding window of Instants, so no wasm face (a wasm
# throttle would inject a Clock — a later refinement). Wraps ANY Space.
ikigai-core = "0.1.45" # Error::is_transient (Retry gates on it)
# Retry's RetryEndpoint implements the async Endpoint trait directly.
async-trait = "0.1"
# Timeout races the invoke against a timer: `select` (futures) + a runtime-agnostic
# timer (futures-timer works under the kernel's `block_on`, no tokio).
futures = "0.3"
futures-timer = "3"
# Throttle parks the excess on a fair async Semaphore (runtime-agnostic).
async-lock = "3"
